[project]
name = "leukemia-gene-literature"
version = "0.1.0"
description = "Gene list + topic → PubMed → OpenAI or Gemini (analysis + structured report)"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "openai>=1.55.0",
  "biopython>=1.84",
  "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
gemini = [
  "google-generativeai>=0.8.0",
]

[project.scripts]
gene-literature-pipeline = "gene_lit.cli:main"

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["gene_lit"]
